--- a/index.html
+++ b/index.html
@@ -298,16 +298,18 @@
     </div>
     <div id="achievement">
       <div class="center-gradient"></div>
+      <div class="middle-gradient"></div>
+      <div class="end-gradient"></div>
       <h1 class="section-title">Achievements</h1>
       <div class="tab-container">
           <input id="all-achievement" type="radio" name="all-achievement" checked />
-          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">11</span></label>
+          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">15</span></label>
           <input id="hackathon" type="radio" name="hackathon" />
           <label class="tab" for="hackathon" onclick="handleLabelClick('competition', 1, 'achievement', 'achievement-card', 'achievement-type')">Competition<span class="notification">6</span></label>
           <input id="award" type="radio" name="award" />
-          <label class="tab" for="award" onclick="handleLabelClick('award', 2, 'achievement', 'achievement-card', 'achievement-type')">Award<span class="notification">1</span></label>
+          <label class="tab" for="award" onclick="handleLabelClick('award', 2, 'achievement', 'achievement-card', 'achievement-type')">Award<span class="notification">3</span></label>
           <input id="others" type="radio" name="others" />
-          <label class="tab" for="others" onclick="handleLabelClick('others', 3, 'achievement', 'achievement-card', 'achievement-type')">Others<span class="notification">4</span></label>
+          <label class="tab" for="others" onclick="handleLabelClick('others', 3, 'achievement', 'achievement-card', 'achievement-type')">Others<span class="notification">6</span></label>
           <span class="glider"></span>
       </div>
       <div class="achievement-cards">
@@ -330,6 +332,26 @@
             </div>
             <div>
               <span class="achievement-type competition">Hackathon</span>
+            </div>
+          </div>
+        </div>
+        <div class="achievement-card">
+          <div class="achievement-desc">
+            <img src="assests/achievement-card-13.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Education Performance Award 2022</h2>
+              <p>Siwanchi Jain Sangh, Hyderabad</p>
+              <div class="achievement-highlight">
+                <a class="no-highlight" href="https://drive.google.com/file/d/1-vjKBfTqGL-yyUbznp1ubVECspapOz2S/view?usp=sharing" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type award">Award</span>
             </div>
           </div>
         </div>
@@ -372,6 +394,26 @@
             </div>
             <div>
               <span class="achievement-type others">Course</span>
+            </div>
+          </div>
+        </div>
+        <div class="achievement-card">
+          <div class="achievement-desc">
+            <img src="assests/achievement-card-12.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Education Performance Award 2018</h2>
+              <p>Siwanchi Jain Sangh, Hyderabad</p>
+              <div class="achievement-highlight">
+                <a class="no-highlight" href="https://drive.google.com/file/d/1kbfXH26kcw5qssQyXg-nemctzyf3s91g/view?usp=sharing" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type award">Award</span>
             </div>
           </div>
         </div>
@@ -541,6 +583,46 @@
             </div>
           </div>
         </div>
+        <div class="achievement-card">
+          <div class="achievement-desc">
+            <img src="assests/achievement-card-14.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Outstanding Performance</h2>
+              <p>IT Wizard Programming and Productivity Curriculum</p>
+              <div class="achievement-highlight">
+                <a class="no-highlight" href="https://drive.google.com/file/d/1mKlr_RzxCDjfRfv78jrdhqGVWr92Oxob/view?usp=sharing" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type others">Certification</span>
+            </div>
+          </div>
+        </div>
+        <div class="achievement-card">
+          <div class="achievement-desc">
+            <img src="assests/achievement-card-15.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Abacus Student Certificate</h2>
+              <p>Sri Chaitanya Techno School</p>
+              <div class="achievement-highlight">
+                <a class="no-highlight" href="https://drive.google.com/file/d/1bAzkJ7VsrYs1KCNJu7qccCoYR2TCqeDS/view?usp=sharing" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type others">Certification</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div id="project">
@@ -637,6 +719,8 @@
     </div>
     <div id="work">
       <div class="center-gradient"></div>
+      <div class="middle-gradient"></div>
+      <div class="end-gradient"></div>
       <h1 class="section-title">Works</h1>
       <div class="tab-container">
           <input id="all-work" type="radio" name="all-work" checked />
@@ -876,7 +960,9 @@
           </div>
         </div>
       </div>
-      <div class="middle-gradient"></div>
+    </div>
+    <div class="end-container">
+      Thank you for visiting my portfolio, Sanyam Jain
     </div>
 
     <script type="text/javascript" src="script.js"></script>
