--- a/index.html
+++ b/index.html
@@ -305,16 +305,38 @@
       <h1 class="hidden section-title">Achievements</h1>
       <div class="hidden tab-container">
           <input id="all-achievement" type="radio" name="all-achievement" checked />
-          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">15</span></label>
+          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">16</span></label>
           <input id="hackathon" type="radio" name="hackathon" />
           <label class="tab" for="hackathon" onclick="handleLabelClick('competition', 1, 'achievement', 'achievement-card', 'achievement-type')">Competition<span class="notification">6</span></label>
           <input id="award" type="radio" name="award" />
           <label class="tab" for="award" onclick="handleLabelClick('award', 2, 'achievement', 'achievement-card', 'achievement-type')">Award<span class="notification">3</span></label>
           <input id="others" type="radio" name="others" />
-          <label class="tab" for="others" onclick="handleLabelClick('others', 3, 'achievement', 'achievement-card', 'achievement-type')">Others<span class="notification">6</span></label>
+          <label class="tab" for="others" onclick="handleLabelClick('others', 3, 'achievement', 'achievement-card', 'achievement-type')">Others<span class="notification">7</span></label>
           <span class="glider"></span>
       </div>
       <div class="achievement-cards">
+        <div class="hidden achievement-card">
+          <div class="achievement-desc">
+            <img src="assests/achievement-card-16.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Participation</h2>
+              <h6>Presented personal NRSC ISRO project work</h6>
+              <p>User Interaction Meet 2024, Hyderabad</p>
+              <div class="achievement-highlight">
+                <span>Team: 3</span>
+                <a class="no-highlight" href="https://drive.google.com/file/d/1QOLPl8QUC-UEDlkCGH35HorOZOoyhPNE/view?usp=sharing" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type others">Participation</span>
+            </div>
+          </div>
+        </div>
         <div class="hidden achievement-card">
           <div class="achievement-desc">
             <img src="assests/achievement-card-01.png" alt="achievement-icon">
