Made portfolio resposive till tablet

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       <h1 class="hidden section-title">Internships</h1>
       <div class="intern-cards">
         <div class="hidden intern-card">
-          <span class="intern-dur">1st Jan, 2024 - Present</span>
+          <span class="intern-dur">Jan, 2024 - Present</span>
           <div class="intern-title">
             <img src="assests/intern-card-00.png" alt="intern-icon">
             <h2>Student Intern at National Remote Sensing Center, ISRO</h2>
