--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
           <input id="all-research" type="radio" name="all-research" checked />
           <label class="tab" for="all-research" onclick="handleLabelClick('all', 0, 'research', 'research-card', 'project-decision')">All<span class="notification">5</span></label>
           <input id="published" type="radio" name="published" />
-          <label class="tab" for="published" onclick="handleLabelClick('published', 1, 'research', 'research-card', 'project-decision')">Published<span class="notification">1</span></label>
+          <label class="tab" for="published" onclick="handleLabelClick('published', 1, 'research', 'research-card', 'project-decision')">Published<span class="notification">2</span></label>
           <input id="accepted" type="radio" name="accepted" />
-          <label class="tab" for="accepted" onclick="handleLabelClick('accepted', 2, 'research', 'research-card', 'project-decision')">Accepted<span class="notification">2</span></label>
+          <label class="tab" for="accepted" onclick="handleLabelClick('accepted', 2, 'research', 'research-card', 'project-decision')">Accepted<span class="notification">1</span></label>
           <input id="awaiting" type="radio" name="awaiting" />
           <label class="tab" for="awaiting" onclick="handleLabelClick('awaiting', 3, 'research', 'research-card', 'project-decision')">Awaiting Decision<span class="notification">2</span></label>
           <span class="glider"></span>
@@ -152,7 +152,7 @@
           </div>
         </div>
         <div class="hidden research-card">
-          <span class="project-decision accepted">Presented at ICCST 2023</span>
+          <span class="project-decision published">Published</span>
           <img class="research-illustrator" src="assests/research-card-03.png" alt="research" />
           <div>
             <h2>Revolutionizing Malware Detection: Feature-Based Approach for Targeting Diverse Malware Categories</h2>
@@ -168,6 +168,12 @@
                 <span class="certificate">
                   <img class="certificate-icon" src="assests/presentation.png" alt="certificate">
                   <span>Presentation</span>
+                </span>
+              </a>
+              <a class="no-highlight-certificate" href="https://ieeexplore.ieee.org/document/10474249" target="_blank">
+                <span class="certificate">
+                  <img class="certificate-icon" src="assests/paper.png" alt="paper">
+                  <span>Paper</span>
                 </span>
               </a>
               <span class="project-highlight">Submitted: Aug, 2023</span>
