--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
       <h1 class="hidden section-title">Research</h1>
       <div class="hidden tab-container">
           <input id="all-research" type="radio" name="all-research" checked />
-          <label class="tab" for="all-research" onclick="handleLabelClick('all', 0, 'research', 'research-card', 'project-decision')">All<span class="notification">5</span></label>
+          <label class="tab" for="all-research" onclick="handleLabelClick('all', 0, 'research', 'research-card', 'project-decision')">All<span class="notification">6</span></label>
           <input id="published" type="radio" name="published" />
-          <label class="tab" for="published" onclick="handleLabelClick('published', 1, 'research', 'research-card', 'project-decision')">Published<span class="notification">2</span></label>
+          <label class="tab" for="published" onclick="handleLabelClick('published', 1, 'research', 'research-card', 'project-decision')">Published<span class="notification">3</span></label>
           <input id="accepted" type="radio" name="accepted" />
           <label class="tab" for="accepted" onclick="handleLabelClick('accepted', 2, 'research', 'research-card', 'project-decision')">Accepted<span class="notification">1</span></label>
           <input id="awaiting" type="radio" name="awaiting" />
@@ -75,6 +75,23 @@
           <span class="glider"></span>
       </div>
       <div class="research-cards">
+        <div class="hidden research-card">
+          <span class="project-decision accepted">Presented at ICAMADA 2024</span>
+          <img class="research-illustrator" src="assests/research-card-06.png" alt="research" />
+          <div>
+            <h2>Geospatial Chatbot Framework for Seamless User Experience</h2>
+            <p class="project-highlight">Guide: Dr Jaya Saxena</p>
+            <div class="research-additional">
+              <a class="no-highlight-certificate" style="margin-left: 0px;" href="https://drive.google.com/file/d/1EhkpZfM_BrY1w2nfRxAmht1O9FG3yx1F/view?usp=sharing" target="_blank">
+                <span class="certificate">
+                  <img class="certificate-icon" src="assests/presentation.png" alt="certificate">
+                  <span>Presentation</span>
+                </span>
+              </a>
+              <span class="project-highlight">Submitted: Apr, 2024</span>
+            </div>
+          </div>
+        </div>
         <div class="hidden research-card">
           <span class="project-decision published">Published</span>
           <img class="research-illustrator" src="assests/research-card-01.png" alt="research" />
@@ -123,7 +140,7 @@
         </div>
         
         <div class="hidden research-card">
-          <span class="project-decision accepted">Presented at ICTCS 2023</span>
+          <span class="project-decision published">Presented at ICTCS 2023</span>
           <img class="research-illustrator" src="assests/research-card-02.png" alt="research" />
           <div>
             <h2>Krushi Snehi: A Web-based Application for Safe and Smart Farming</h2>
@@ -145,6 +162,12 @@
                 <span class="certificate">
                   <img class="certificate-icon" src="assests/contribute.png" alt="certificate">
                   <span>Contribution</span>
+                </span>
+              </a>
+              <a class="no-highlight-certificate" href="https://link.springer.com/chapter/10.1007/978-981-97-1260-1_21" target="_blank">
+                <span class="certificate">
+                  <img class="certificate-icon" src="assests/paper.png" alt="paper">
+                  <span>Paper</span>
                 </span>
               </a>
               <span class="project-highlight">Submitted: Aug, 2023</span>
@@ -214,7 +237,7 @@
               <h2>Vellore Institute of Technology, Vellore</h2>
               <div class="outer-circle">
                 <div class="inner-circle">
-                  <span>9.15 / 10</span>
+                  <span>9.06 / 10</span>
                 </div>
               </div>
             </div>
@@ -311,13 +334,13 @@
       <h1 class="hidden section-title">Achievements</h1>
       <div class="hidden tab-container">
           <input id="all-achievement" type="radio" name="all-achievement" checked />
-          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">16</span></label>
+          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">17</span></label>
           <input id="hackathon" type="radio" name="hackathon" />
           <label class="tab" for="hackathon" onclick="handleLabelClick('competition', 1, 'achievement', 'achievement-card', 'achievement-type')">Competition<span class="notification">6</span></label>
           <input id="award" type="radio" name="award" />
           <label class="tab" for="award" onclick="handleLabelClick('award', 2, 'achievement', 'achievement-card', 'achievement-type')">Award<span class="notification">3</span></label>
           <input id="others" type="radio" name="others" />
-          <label class="tab" for="others" onclick="handleLabelClick('others', 3, 'achievement', 'achievement-card', 'achievement-type')">Others<span class="notification">7</span></label>
+          <label class="tab" for="others" onclick="handleLabelClick('others', 3, 'achievement', 'achievement-card', 'achievement-type')">Others<span class="notification">8</span></label>
           <span class="glider"></span>
       </div>
       <div class="achievement-cards">
@@ -340,6 +363,27 @@
             </div>
             <div>
               <span class="achievement-type others">Participation</span>
+            </div>
+          </div>
+        </div>
+        <div class="hidden achievement-card">
+          <div class="achievement-desc">
+            <img src="assests/Secretary.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Secretary</h2>
+              <h6>Board member during 2023-2024</h6>
+              <p>IEEE Technology and Engineering Management Society, VIT chapter</p>
+              <div class="achievement-highlight">
+                <a class="no-highlight" href="https://drive.google.com/file/d/1eHorwwAHigoyfEQ_uizJxrHfb136gbzP/view?usp=sharing" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type others">Volunteer</span>
             </div>
           </div>
         </div>
