--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       <h1 class="hidden section-title">Grades</h1>
       <div class="grade-cards">
         <div class="hidden grade-card">
-          <span class="grade-dur">May 2020 - Present</span>
+          <span class="grade-dur">May 2020 - May 2024</span>
           <div class="grade-title">
             <img src="assests/degree.png" alt="grade-icon">
             <div class="grade-container">
@@ -374,6 +374,7 @@
               <h6>Board member during 2023-2024</h6>
               <p>IEEE Technology and Engineering Management Society, VIT chapter</p>
               <div class="achievement-highlight">
+                <span>Team: 100+</span>
                 <a class="no-highlight" href="https://drive.google.com/file/d/1eHorwwAHigoyfEQ_uizJxrHfb136gbzP/view?usp=sharing" target="_blank">
                   <span class="certificate">
                     <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
