Updated internship details

--- a/index.html
+++ b/index.html
@@ -291,6 +291,12 @@
           </div>
           <div class="intern-highlight">
             <span>Company: NRSC, ISRO</span>
+            <a class="no-highlight" href="https://drive.google.com/file/d/1FV0OMaw_OkChn33a-m19SVZe5bZajHBA/view?usp=sharing" target="_blank">
+              <span class="certificate">
+                <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                <p>Certificate</p>
+              </span>
+            </a>
           </div>
         </div>
         <div class="hidden intern-card">
