Updated internship durations to dates

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
           </div>
         </div>
         <div class="hidden intern-card">
-          <span class="intern-dur">3 months</span>
+          <span class="intern-dur">Jan 2022 - June 2022</span>
           <div class="intern-title">
             <img style="width: 265px;" src="assests/intern-card-01.png" alt="intern-icon">
             <h2>Full Stack Web Developer</h2>
@@ -316,7 +316,7 @@
           </div>
         </div>
         <div class="hidden intern-card">
-          <span class="intern-dur">2 months</span>
+          <span class="intern-dur">Dec 2021 - Jan 2022</span>
           <div class="intern-title">
             <img src="assests/intern-card-02.png" alt="intern-icon">
             <h2>Cyber Security & Ethical Hacking Program Intern</h2>
