--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <div class="hidden gradient"></div>
       <div class="hidden desc">
         <h2>Hello! I am <span style="color: #7127BA;">Sanyam Jain</span></h2>
-        <p>A final year B.Tech Information Technology student at Vellore Institute of Technology, Vellore, India.</p>
+        <p>A Computer Science graduate student at Arizona State University, Arizona, USA.</p>
         <p>
           A passionate and hard-working person. 
           Encourage collaborative work to make friends and gain diverse knowledge. 
         </p>
-        <p>Secretary of IEEE Technology and Engineering Management Society, VIT chapter, 2023-24</p>
+        <p>Ex-Secretary of IEEE Technology and Engineering Management Society, VIT chapter, 2023-24</p>
         <div class="profiles">
           <a class="no-highlight" href="mailto:sanyamjain.usa@gmail.com" target="_blank">
             <img class="profile-icon" src="assests/Gmail.png" alt="mail" />
@@ -76,6 +76,40 @@
       </div>
       <div class="research-cards">
         <div class="hidden research-card">
+          <span class="project-decision awaiting">Awaiting Decision at BMC Medical Imaging</span>
+          <img class="research-illustrator" src="assests/research-card-05.png" alt="research" />
+          <div>
+            <h2>Advancing Cancer Diagnosis: A Deep Learning-Based Framework for Multi-Class Classification of Diverse Cancer Types via X-ray Imaging</h2>
+            <p class="project-highlight">Guide: Dr Sumathy S, Dr Durai Raj</p>
+            <div class="research-additional">
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Deep-Learning-Based-Framework-for-Multi-Class-Classification-of-Diverse-Cancer-Types" target="_blank">
+                <div class="github-code">
+                  <img class="github-icon" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
+              <span class="project-highlight">Submitted: Sep, 2024</span>
+            </div>
+          </div>
+        </div>
+        <div class="hidden research-card"></div>
+          <span class="project-decision awaiting">Accepted in Smart Grid Book</span>
+          <img class="research-illustrator" src="assests/research-card-04.png" alt="research" />
+          <div>
+            <h2>INR FOREX Forecasting using Machine Learning and Deep Learning</h2>
+            <p class="project-highlight">Guide: Dr Aswani Kumar Cherukuri</p>
+            <div class="research-additional">
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/INR-FOREX-Forecasting-using-Machine-Learning-and-Deep-Learning-Techniques" target="_blank">
+                <div class="github-code">
+                  <img class="github-icon" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
+              <span class="project-highlight">Submitted: June, 2024</span>
+            </div>
+          </div>
+        </div>
+        <div class="hidden research-card">
           <span class="project-decision accepted">Presented at ICAMADA 2024</span>
           <img class="research-illustrator" src="assests/research-card-06.png" alt="research" />
           <div>
@@ -121,24 +155,6 @@
             </div>
           </div>
         </div>
-        <div class="hidden research-card">
-          <span class="project-decision awaiting">Awaiting Decision at Knowledge and Information Systems Journal</span>
-          <img class="research-illustrator" src="assests/research-card-05.png" alt="research" />
-          <div>
-            <h2>Advancing Cancer Diagnosis: A Deep Learning-Based Framework for Multi-Class Classification of Diverse Cancer Types via X-ray Imaging</h2>
-            <p class="project-highlight">Guide: Dr Sumathy S, Dr Durai Raj</p>
-            <div class="research-additional">
-              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Deep-Learning-Based-Framework-for-Multi-Class-Classification-of-Diverse-Cancer-Types" target="_blank">
-                <div class="github-code">
-                  <img class="github-icon" src="assests/GitHub.png" alt="code" />
-                  <span>Repository</span>
-                </div>
-              </a>
-              <span class="project-highlight">Submitted: Jan, 2024</span>
-            </div>
-          </div>
-        </div>
-        
         <div class="hidden research-card">
           <span class="project-decision published">Presented at ICTCS 2023</span>
           <img class="research-illustrator" src="assests/research-card-02.png" alt="research" />
@@ -206,24 +222,7 @@
         <!-- <div class="more">
           <span class="project-highlight more-content" style="float: right;">+1 more</span>
         </div> -->
-        <div class="hidden research-card">
-          <span class="project-decision awaiting">Awaiting Decision at JARMIS 2023</span>
-          <img class="research-illustrator" src="assests/research-card-04.png" alt="research" />
-          <div>
-            <h2>INR FOREX Forecasting using Machine Learning and Deep Learning</h2>
-            <p class="project-highlight">Guide: Dr Aswani Kumar Cherukuri</p>
-            <div class="research-additional">
-              <a class="no-highlight" href="https://github.com/Sanyam-jain30/INR-FOREX-Forecasting-using-Machine-Learning-and-Deep-Learning-Techniques" target="_blank">
-                <div class="github-code">
-                  <img class="github-icon" src="assests/GitHub.png" alt="code" />
-                  <span>Repository</span>
-                </div>
-              </a>
-              <span class="project-highlight">Submitted: Dec, 2023</span>
-            </div>
-          </div>
       </div>
-    </div>
     </div>
     <div id="grade">
       <div class="hidden center-gradient"></div>
@@ -300,7 +299,7 @@
           </div>
         </div>
         <div class="hidden intern-card">
-          <span class="intern-dur">Jan 2022 - June 2022</span>
+          <span class="intern-dur">3 months</span>
           <div class="intern-title">
             <img style="width: 265px;" src="assests/intern-card-01.png" alt="intern-icon">
             <h2>Full Stack Web Developer</h2>
@@ -316,7 +315,7 @@
           </div>
         </div>
         <div class="hidden intern-card">
-          <span class="intern-dur">Dec 2021 - Jan 2022</span>
+          <span class="intern-dur">2 months</span>
           <div class="intern-title">
             <img src="assests/intern-card-02.png" alt="intern-icon">
             <h2>Cyber Security & Ethical Hacking Program Intern</h2>
