--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
           </div>
         </div>
-        <div class="hidden research-card"></div>
+        <div class="hidden research-card">
           <span class="project-decision awaiting">Accepted in Smart Grid Book</span>
           <img class="research-illustrator" src="assests/research-card-04.png" alt="research" />
           <div>
