--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </div>
         </div>
         <div class="hidden research-card">
-          <span class="project-decision accepted">Presented at ICAMADA 2024</span>
+          <span class="project-decision accepted">Published</span>
           <img class="research-illustrator" src="assests/research-card-06.png" alt="research" />
           <div>
             <h2>Geospatial Chatbot Framework for Seamless User Experience</h2>
@@ -299,7 +299,7 @@
           </div>
         </div>
         <div class="hidden intern-card">
-          <span class="intern-dur">3 months</span>
+          <span class="intern-dur">Jan 2022 - Jun 2022</span>
           <div class="intern-title">
             <img style="width: 265px;" src="assests/intern-card-01.png" alt="intern-icon">
             <h2>Full Stack Web Developer</h2>
@@ -315,7 +315,7 @@
           </div>
         </div>
         <div class="hidden intern-card">
-          <span class="intern-dur">2 months</span>
+          <span class="intern-dur">Dec 2021 - Jan 2022</span>
           <div class="intern-title">
             <img src="assests/intern-card-02.png" alt="intern-icon">
             <h2>Cyber Security & Ethical Hacking Program Intern</h2>
