--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
           <input id="all-research" type="radio" name="all-research" checked />
           <label class="tab" for="all-research" onclick="handleLabelClick('all', 0, 'research', 'research-card', 'project-decision')">All<span class="notification">6</span></label>
           <input id="published" type="radio" name="published" />
-          <label class="tab" for="published" onclick="handleLabelClick('published', 1, 'research', 'research-card', 'project-decision')">Published<span class="notification">3</span></label>
+          <label class="tab" for="published" onclick="handleLabelClick('published', 1, 'research', 'research-card', 'project-decision')">Published<span class="notification">4</span></label>
           <input id="accepted" type="radio" name="accepted" />
           <label class="tab" for="accepted" onclick="handleLabelClick('accepted', 2, 'research', 'research-card', 'project-decision')">Accepted<span class="notification">1</span></label>
           <input id="awaiting" type="radio" name="awaiting" />
-          <label class="tab" for="awaiting" onclick="handleLabelClick('awaiting', 3, 'research', 'research-card', 'project-decision')">Awaiting Decision<span class="notification">2</span></label>
+          <label class="tab" for="awaiting" onclick="handleLabelClick('awaiting', 3, 'research', 'research-card', 'project-decision')">Awaiting Decision<span class="notification">1</span></label>
           <span class="glider"></span>
       </div>
       <div class="research-cards">
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="hidden research-card">
-          <span class="project-decision awaiting">Accepted in Smart Grid Book</span>
+          <span class="project-decision published">Published</span>
           <img class="research-illustrator" src="assests/research-card-04.png" alt="research" />
           <div>
             <h2>INR FOREX Forecasting using Machine Learning and Deep Learning</h2>
@@ -105,12 +105,18 @@
                   <span>Repository</span>
                 </div>
               </a>
+              <a class="no-highlight-certificate" href="https://www.routledge.com/AI-and-Blockchain-in-Smart-Grids-Fundamentals-Methods-and-Applications/Tiwari-KumarTyagi/p/book/9781032812960?srsltid=AfmBOoolE713j2EDW4B7Nv7vROGa5HjPH_p9_dScq-illqoPv4ah8oAr" target="_blank">
+                <span class="certificate">
+                  <img class="certificate-icon" src="assests/paper.png" alt="book" />
+                  <span>Book</span>
+                </span>
+              </a>
               <span class="project-highlight">Submitted: June, 2024</span>
             </div>
           </div>
         </div>
         <div class="hidden research-card">
-          <span class="project-decision accepted">Published</span>
+          <span class="project-decision accepted">Accepted at ICAMADA 2024</span>
           <img class="research-illustrator" src="assests/research-card-06.png" alt="research" />
           <div>
             <h2>Geospatial Chatbot Framework for Seamless User Experience</h2>
@@ -156,7 +162,7 @@
           </div>
         </div>
         <div class="hidden research-card">
-          <span class="project-decision published">Presented at ICTCS 2023</span>
+          <span class="project-decision published">Published</span>
           <img class="research-illustrator" src="assests/research-card-02.png" alt="research" />
           <div>
             <h2>Krushi Snehi: A Web-based Application for Safe and Smart Farming</h2>
@@ -349,6 +355,28 @@
           <span class="glider"></span>
       </div>
       <div class="achievement-cards">
+        <div class="hidden achievement-card">
+          <div class="achievement-desc">
+            <img src="assests/achievement-card-17.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Winner</h2>
+              <h6>Competed 143 participants</h6>
+              <p>Hack SoDA 2024, Arizona State University</p>
+              <div class="achievement-highlight">
+                <span>Team: 4</span>
+                <a class="no-highlight" href="https://devpost.com/software/gradify-7jvqnm" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Project Gallery</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type competition">Hackathon</span>
+            </div>
+          </div>
+        </div>
         <div class="hidden achievement-card">
           <div class="achievement-desc">
             <img src="assests/achievement-card-16.png" alt="achievement-icon">
