--- a/index.html
+++ b/index.html
@@ -234,6 +234,23 @@
       <h1 class="hidden section-title">Grades</h1>
       <div class="grade-cards">
         <div class="hidden grade-card">
+          <span class="grade-dur">Aug 2024 - Present</span>
+          <div class="grade-title">
+            <img src="assests/master-degree.png" alt="grade-icon">
+            <div class="grade-container">
+              <h2>Arizona State University, Tempe</h2>
+              <div class="outer-circle">
+                <div class="inner-circle">
+                  <span>3.67 / 4</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grade-highlight">
+            <span>Master of Science in Computer Science</span>
+          </div>
+        </div>
+        <div class="hidden grade-card">
           <span class="grade-dur">May 2020 - May 2024</span>
           <div class="grade-title">
             <img src="assests/degree.png" alt="grade-icon">
@@ -345,7 +362,9 @@
       <div class="hidden tab-container">
           <input id="all-achievement" type="radio" name="all-achievement" checked />
           <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">19</span></label>
+          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">19</span></label>
           <input id="hackathon" type="radio" name="hackathon" />
+          <label class="tab" for="hackathon" onclick="handleLabelClick('competition', 1, 'achievement', 'achievement-card', 'achievement-type')">Competition<span class="notification">8</span></label>
           <label class="tab" for="hackathon" onclick="handleLabelClick('competition', 1, 'achievement', 'achievement-card', 'achievement-type')">Competition<span class="notification">8</span></label>
           <input id="award" type="radio" name="award" />
           <label class="tab" for="award" onclick="handleLabelClick('award', 2, 'achievement', 'achievement-card', 'achievement-type')">Award<span class="notification">3</span></label>
